--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,6 +196,20 @@ h2 {
   margin: 0 0 0 -13px;
 }
 
+.button {
+  background: $turquoise;
+  padding: 6px 22px;
+  border: 1px solid $black;
+  -moz-box-shadow:    inset 0 0 3px $black;
+  -webkit-box-shadow: inset 0 0 3px $black;
+  box-shadow:         inset 0 0 3px $black;
+  color: white;
+  font-size: 20px;
+  font-family: Helvetica, sans-serif;
+  vertical-align: middle;
+}
+
+
 hr {
   margin: 0 0 12px 0;
 }
