--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,9 @@ $orange: #e37b40;
 $nav-color: #e0dcda;
 $main-color: #f2f2f2;
 
+
+
+
 #main {
   margin: 0 auto;
 }
@@ -30,23 +33,24 @@ $main-color: #f2f2f2;
   border-right: 1px solid $white;
 }
 
-#main-color {
-  background-color: $main-color;
-}
-
 #turquoise {
   color: $turquoise;
   font-family: 'BebasNeue', sans-serif;
 }
 
 #infotext {
-  font-family: Helvetica, sans-serif;
   font-size: 14pt;
+}
+
+#iframe-border {
+  border-left: 10px solid $turquoise;
+  border-right: 10px solid $turquoise;
 }
 
 body {
   font-family: Helvetica, sans-serif;
   font-size: 13pt;
+  background-color: $main-color;
 }
 
 input[type=text]{
@@ -62,6 +66,7 @@ input[type=text]{
     box-shadow: 0 0 4px 0 $turquoise;
   }
 }
+
 .inputWithIcon{
   position:relative;
   input[type=text]{
@@ -73,7 +78,7 @@ input[type=text]{
   i{
     position:absolute;
     left:0;
-    padding:13px 12px;
+    padding: 10px 7px;
     color: $nav-color;
     transition:.3s;
   }
@@ -103,7 +108,7 @@ input[type=date]{
   i{
     position:absolute;
     left:0;
-    padding:13px 12px;
+    padding: 10px 8px;
     color: $nav-color;
     transition:.3s;
   }
@@ -133,7 +138,7 @@ input[type=password]{
   i{
     position:absolute;
     left:0;
-    padding:13px 12px;
+    padding: 10px 8px;
     margin: -40px 0 0 0;
     color: $nav-color;
     transition:.3s;
@@ -164,10 +169,83 @@ input[type=email]{
   i{
     position:absolute;
     left:0;
-    padding:13px 12px;
+    padding: 10px 8px;
     margin: -40px 0 0 0;
     color: $nav-color;
     transition:.3s;
+  }
+}
+
+.button-tiere {
+  background: $black;
+  opacity: 0.8;
+  padding: 6px 22px;
+  -moz-box-shadow:    inset 0 0 1px $black;
+  -webkit-box-shadow: inset 0 0 1px $black;
+  box-shadow:         inset 0 0 1px $black;
+  color: $white;
+  font-size: 20px;
+  font-family: Helvetica, sans-serif;
+  vertical-align: middle;
+}
+
+.btn-group {
+  a:hover {
+    text-decoration: none;
+    color: $white;
+  }
+}
+
+.panel > .panel-heading {
+  background-color: $black;
+  opacity: 0.8;
+  font-family: 'BebasNeue', sans-serif;
+  font-weight: bolder;
+  text-align: center;
+  h4 {
+    font-size: 29px;
+    color: $turquoise;
+  }
+}
+
+/*https://github.com/IanLunn/Hover*/
+.hvr-sweep-to-right {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: $turquoise;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  &:hover, &:focus, &:active {
+    color: white;
+  }
+  &:hover:before, &:focus:before, &:active:before {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
   }
 }
 
@@ -176,6 +254,7 @@ h1 {
   font-size: 25pt;
   color: $black;
   padding: 0;
+  word-spacing: 8px;
 }
 
 #h1-modified {
@@ -190,6 +269,37 @@ h2 {
   padding: 0;
 }
 
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid $nav-color;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.bar {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 15px solid $black;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.animal-data{
+  li {
+    list-style: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: $black;
+    letter-spacing: 0.1px;
+  }
+  p {
+    line-height: 1.1;
+  }
+}
+
 #login-text {
   font-family: Helvetica, sans-serif;
   font-size: 12pt;
@@ -197,18 +307,21 @@ h2 {
 }
 
 .button {
-  background: $turquoise;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
   padding: 6px 22px;
   border: 1px solid $black;
-  -moz-box-shadow:    inset 0 0 3px $black;
-  -webkit-box-shadow: inset 0 0 3px $black;
-  box-shadow:         inset 0 0 3px $black;
-  color: white;
+
+  background-color: $black;
+  color: $white;
   font-size: 20px;
   font-family: Helvetica, sans-serif;
   vertical-align: middle;
+  &:hover {
+    background-color: $turquoise;
+    color: $white;
+  }
 }
-
 
 hr {
   margin: 0 0 12px 0;
@@ -453,3 +566,4 @@ footer {
 .wrapper.login {
   width: 350px;
 }
+
